services/ui-svelte/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svelte-site-service
spec:
  selector:
    app: svelte-site
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
